# CyTrace

./: .ai_profile  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.yaml  deny.toml  rust-toolchain.toml
.asp-gate-log/: 20260702T054319Z-G1-ADR-011.md  20260702T054341Z-G1-ADR-012.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/cytrace-cli/: Cargo.toml
crates/cytrace-cli/src/: engine.rs  i18n.rs  main.rs
crates/cytrace-core/: Cargo.toml
crates/cytrace-core/src/: engine.rs  error.rs  failon.rs  lib.rs  parse.rs  severity.rs  timefmt.rs
crates/cytrace-core/tests/: golden.rs
crates/cytrace-core/tests/fixtures/: cyclonedx.json  grype.json
crates/cytrace-core/tests/golden/: scanresult.json
crates/cytrace-i18n/: Cargo.toml
crates/cytrace-i18n/src/: lib.rs
crates/cytrace-report/: Cargo.toml
crates/cytrace-report/assets/: report-template.html
crates/cytrace-report/src/: lib.rs
crates/cytrace-server/: Cargo.toml
crates/cytrace-server/src/: auth.rs  config.rs  error.rs  lib.rs  router.rs  session.rs  state.rs  tls.rs
crates/cytrace-server/src/api/: mod.rs  session.rs
crates/cytrace-server/tests/: api.rs
crates/cytrace-types/: Cargo.toml
crates/cytrace-types/src/: lib.rs
docs/: DELIVERY_SOP.md  SDS.md  SRS.md  UIUX_SPEC.md
docs/adr/: ADR-001-initial-technology-stack.md  ADR-002-scan-engine-selection.md  ADR-003-offline-vuln-db.md  ADR-004-i18n.md  ADR-005-report-architecture.md  ADR-006-severity-failon.md  ADR-007-packaging-delivery.md  ADR-008-testing-golden-baseline.md  ADR-009-scanresult-audit-contract.md  ADR-010-dual-platform-release.md  ADR-011-web-service-mode.md  ADR-012-containerization-ghcr.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  data.ts  i18n.ts  index.css  main.tsx  sample.json  types.ts
frontend/src/components/: ui.tsx
locales/: en-US.json  zh-TW.json
scripts/: i18n-check.py  package.ps1  package.sh
